--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,20 @@ cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
 distro==1.9.0
+entrypoints==0.4
+Faker==28.1.0
+favicon==0.7.0
 feedparser==6.0.11
+fonttools==4.53.1
 frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.43
 greenlet==3.0.3
 h11==0.14.0
+htbuilder==0.6.2
 httpcore==1.0.5
 httpx==0.27.2
 idna==3.8
@@ -28,14 +35,20 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
 langchain==0.2.15
 langchain-core==0.2.37
 langchain-openai==0.1.23
 langchain-text-splitters==0.2.2
 langsmith==0.1.108
+lxml==5.3.0
+Markdown==3.7
 markdown-it-py==3.0.0
+markdownlit==0.0.7
 MarkupSafe==2.1.5
+matplotlib==3.9.2
 mdurl==0.1.2
+more-itertools==10.4.0
 multidict==6.0.5
 narwhals==1.6.0
 numpy==1.26.4
@@ -44,12 +57,16 @@ orjson==3.10.7
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
+plotly==5.24.0
+prometheus_client==0.20.0
 protobuf==5.28.0
 pyarrow==17.0.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
+pymdown-extensions==10.9
+pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.2
@@ -64,7 +81,18 @@ smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.32
+st-annotated-text==4.0.1
+st-theme==1.2.3
 streamlit==1.38.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.2
+streamlit-embedcode==0.1.2
+streamlit-extras==0.4.7
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.9
+streamlit-keyup==0.2.4
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
 tenacity==8.5.0
 tiktoken==0.7.0
 toml==0.10.2
@@ -73,4 +101,5 @@ tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+validators==0.33.0
 yarl==1.9.7
